# ScanHound

./: .dockerignore  .env.example  .gitignore  AUDIT_CHANGELOG.md  AUDIT_ISSUES.md  CHANGELOG.md  CODEX_REVIEW.md  DEPLOY_INSTRUCTIONS.md  DEVELOPMENT.md  DOCKER.md  Dockerfile  HELP.md  README.md  SQLITE_AUDIT.md  config.example.json  docker-compose.yml  inspect_dbs.py  main.py  requirements-docker.txt  requirements.txt  scanhound-backend.spec
backend/: __init__.py  analytics.py  app_service.py  auth_service.py  auto_grab_service.py  background_scanner.py  browser_adapter.py  candidate_evidence.py  config.py  database.py  detail_scraper.py  download_outcome.py  download_queue.py  download_service.py  filename_utils.py  hdencode_action_service.py  hdencode_candidate_service.py  hdencode_coordinator.py  hdencode_rss_service.py  hdencode_shadow.py  hdencode_transport.py  imdb_scraper.py  link_scraper.py  matching.py  metadata_enricher.py  models.py  network.py  notification_bridge.py  notifications.py  pipeline_service.py  plex_manager.py  plex_metadata_scan.py  plex_service.py  rt_scraper.py  runtime_lock.py  scanner_service.py  scrape_outcome.py  scrapers.py  source_health.py  tmdb_client.py  (+1 more)
docker/: entrypoint.sh
docs/: 2026-03-13-production-readiness-review.md  ANDROID_BUILD.md  ANDROID_PLAN.md  CODE_REVIEW_PLAN.md  HANDOFF.md  MOBILE_UI_PLAN.md  TODO.md  audit-plan.md  baseline-failures-triage-2026-07-19.md  (+17 more)
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  sidecar.rs
(+514 files in other folders)
